--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Masters Pool 2024</title>
+    <style>
+      th, td {
+        padding: 8px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
