--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Masters Pool 2024</title>
+    <meta http-equiv="Cache-Control" content="no-cache"/>
     <style>
       th, td {
         padding: 8px;
