--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,13 @@
+<!DOCTYPE html>
+
 <html>
   <head>
     <title>Masters Pool 2024</title>
     <meta http-equiv="Cache-Control" content="no-cache"/>
-    <style>
-      th, td {
-        padding: 8px;
-      }
-    </style>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100%; display: flex; flex-direction: column;"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
